--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-konva": "^18.2.10",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "use-image": "^1.1.1",
